// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook snapshot tests Storyshots Examples/Layouts One To One Call Layout 1`] = `
<div
  className="css-80 root-0 body-1"
>
  <div
    className="css-80"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-3"
        style={
          Object {
            "border": "1px",
            "height": "500px",
            "width": "600px",
          }
        }
      >
        <div
          className="ms-Stack css-7"
        >
          <div
            className="ms-Stack css-8"
          >
            <div
              className="ms-Stack css-10"
            >
              <div
                className="ms-Persona ms-Persona--size100 root-11"
              >
                <div
                  className="ms-Persona-coin ms-Persona--size100 coin-18"
                  role="presentation"
                >
                  <div
                    className="ms-Persona-imageArea imageArea-20"
                    role="presentation"
                  >
                    <div
                      aria-hidden="true"
                      className="ms-Persona-initials initials-23"
                    >
                      <span>
                        H
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-26"
          >
            <div
              className="ms-Stack css-7"
            >
              <div
                className="ms-Stack css-8"
              >
                <div
                  className="ms-Stack css-10"
                >
                  <div
                    className="ms-Persona ms-Persona--size100 root-11"
                  >
                    <div
                      className="ms-Persona-coin ms-Persona--size100 coin-18"
                      role="presentation"
                    >
                      <div
                        className="ms-Persona-imageArea imageArea-20"
                        role="presentation"
                      >
                        <div
                          aria-hidden="true"
                          className="ms-Persona-initials initials-27"
                        >
                          <i
                            aria-hidden={true}
                            className="root-37 root-29"
                            data-icon-name="Contact"
                          >
                            
                          </i>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storybook snapshot tests Storyshots Examples/Layouts Screen Share Layout 1`] = `
<div
  className="css-80 root-0 body-1"
>
  <div
    className="css-80"
    data-uses-unhanded-props={true}
    dir="ltr"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100vh",
          "justifyContent": "center",
        }
      }
    >
      <div
        className="ms-Stack css-8"
        style={
          Object {
            "border": ".063rem",
            "height": "500px",
            "width": "850px",
          }
        }
      >
        <div
          className="ms-StackItem css-9"
        >
          <div
            className="ms-Stack css-10"
          >
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-31"
                            >
                              <span>
                                M
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Michael
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-35"
                            >
                              <span>
                                J
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Jim
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-36"
                            >
                              <span>
                                P
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Pam
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-37"
                            >
                              <span>
                                D
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Dwight
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-38"
                            >
                              <span>
                                K
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Kelly
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-39"
                            >
                              <span>
                                R
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Ryan
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-11"
            >
              <div
                className="ms-Stack css-12"
              >
                <div
                  className="ms-Stack css-16"
                >
                  <div
                    className="ms-Stack css-17"
                  >
                    <div
                      className="ms-Stack css-18"
                    >
                      <div
                        className="ms-Persona ms-Persona--size100 root-19"
                      >
                        <div
                          className="ms-Persona-coin ms-Persona--size100 coin-26"
                          role="presentation"
                        >
                          <div
                            className="ms-Persona-imageArea imageArea-28"
                            role="presentation"
                          >
                            <div
                              aria-hidden="true"
                              className="ms-Persona-initials initials-40"
                            >
                              <span>
                                A
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    className="css-78 css-34"
                  >
                    Andy
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-41"
        >
          <div
            className="ms-Stack css-16"
          >
            <div
              className="ms-Stack css-17"
            >
              <div
                className="ms-Stack css-18"
              >
                <div
                  className="ms-Persona ms-Persona--size100 root-19"
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size100 coin-26"
                    role="presentation"
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-28"
                      role="presentation"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-35"
                      >
                        <i
                          aria-hidden={true}
                          className="root-37 root-44"
                          data-icon-name="Contact"
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-Stack css-45"
            >
              <div
                className="ms-Stack css-16"
              >
                <div
                  className="ms-Stack css-17"
                >
                  <div
                    className="ms-Stack css-18"
                  >
                    <div
                      className="ms-Persona ms-Persona--size100 root-19"
                    >
                      <div
                        className="ms-Persona-coin ms-Persona--size100 coin-26"
                        role="presentation"
                      >
                        <div
                          className="ms-Persona-imageArea imageArea-28"
                          role="presentation"
                        >
                          <div
                            aria-hidden="true"
                            className="ms-Persona-initials initials-35"
                          >
                            <i
                              aria-hidden={true}
                              className="root-37 root-44"
                              data-icon-name="Contact"
                            >
                              
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
